# traffic-safety-clip-logger

./: .dockerignore  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  Dockerfile.capture  Dockerfile.gpu  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml  traffic.md
.github/workflows/: ci.yml
config/: config.camera.yaml  config.dev.yaml  config.example.yaml  config.mini_pc.yaml
docs/: building-with-ai.md  challenges.md  dashboard.md  engineering-review-2026-06.md  maintenance-log.md  unified-store-plan.md  vlm-vehicle-id-experiment.md
samples/: README.md
scripts/: bench_frame_budget.py  build_icons.py  calibrate_click.py  check_orphans.py  dewarp_check.py  dewarp_grid.py  install_ubuntu_deps.sh  lane_tuner.py  make_demo_data.py  measure_speed.py  montage.py  police_4k_probe.py  police_check.py  police_prompt_tune.py  police_sub_calib.py  prune_hevc_videos.py  quad_overlay_still.py  reannotate.py  rename_event_clips.py  revalidate_passes.py  run_supervisor.vbs  setup_mini_pc.sh  setup_wsl_dev.sh  test_camera_formats.sh  undistort_tune.py
src/traffic_logger/: __init__.py  cli_handlers.py  config.py  main.py
src/traffic_logger/analyze/: __init__.py  best_frame.py  calibrate.py  detector.py  lane_model.py  live.py  metrics.py  offline.py  pass_recorder.py  pass_validity.py  police_classifier.py  project.py  ring_source.py  tracker.py  undistort.py
src/traffic_logger/audio/: __init__.py  capture.py  loudness.py
src/traffic_logger/capture/: __init__.py  camera_probe.py  health.py  recorder.py  ring_pruner.py  rtsp_server.py  segment_index.py
src/traffic_logger/events/: __init__.py  exporter.py  manager.py  (+9 more)
systemd/: traffic-analyze.service  traffic-capture.service
tests/: conftest.py  test_aggressiveness.py  test_calibrate.py  test_camera_probe.py  test_center_lane_pass.py  test_cli_help.py  test_config.py  test_detection_tracking.py  test_event_export.py  test_event_manager.py  test_event_naming.py  test_exporter.py  test_ground_span.py  test_health.py  test_lane_model.py  test_live.py  test_metrics.py  test_offline_pipeline.py  test_overlay_buffer.py  test_overlay_render.py  test_pass_recorder.py  test_pass_validity.py  test_police_log.py  test_project.py  test_recorder.py  test_recorder_loop.py  test_recording_integration.py  test_relative_speeding.py  test_ring_clip_exporter.py  test_ring_pruner.py  test_screenshot_frame.py  test_segment_index.py  test_speed_log.py  test_speed_report.py  test_store.py  test_sun.py  test_supervise_child.py  test_tracker.py  test_undistort.py  test_violator_thumbnail.py  (+5 more)
(+24 files in other folders)
